added the hotjar configuration

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
         }
       }
     </style>
-
+    <!-- Hotjar Tracking Code for https://niifi-interface.netlify.app/ -->
     <title>Niifi Interface</title>
   </head>
   <body>
