--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
         font-family: 'Inter', sans-serif;
         box-sizing: border-box;
       }
-
+      .MuiPopover-root {
+        z-index: 50000 !important;
+      }
       @supports (font-variation-settings: normal) {
         * {
           font-family: 'Inter var', sans-serif;
