--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
     <style>
       * {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Roboto', sans-serif;
         box-sizing: border-box;
       }
       .MuiPopover-root {
@@ -34,7 +34,7 @@
       }
       @supports (font-variation-settings: normal) {
         * {
-          font-family: 'Inter var', sans-serif;
+          font-family: 'Roboto', sans-serif;
         }
       }
 
