OM-201 fixed the issue of focus and popover flickring

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     -->
 
     <style>
+      *:focus-visible {
+        outline: none !important;
+      }
       * {
         font-family: 'Inter', sans-serif;
         box-sizing: border-box;
