--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500" type='text/css'>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ff007a" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
