--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/192x192_App_Icon.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Roboto:400,500" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500" type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500" type="text/css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
