OM-233 Fixed the background color of initial page loading.

--- a/public/index.html
+++ b/public/index.html
@@ -62,32 +62,18 @@
         font-feature-settings: 'ss01' on, 'ss02' on, 'cv01' on, 'cv03' on;
       }
 
-      #background-radial-gradient {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        pointer-events: none;
-        width: 200vw;
-        height: 200vh;
-        mix-blend-mode: color;
-        background: radial-gradient(50% 50% at 50% 50%, #fc077d10 0%, rgba(255, 255, 255, 0) 100%);
-        transform: translate(-50vw, -100vh);
-        z-index: -1;
-      }
-
       html {
         min-height: 100%;
       }
 
       @media (prefers-color-scheme: dark) {
         html {
-          background-color: #212429;
+          background-color: #051a18;
         }
       }
       @media (prefers-color-scheme: light) {
         html {
-          background-color: #f7f8fa;
+          background-color: #f7fdfc;
         }
       }
     </style>
@@ -102,8 +88,6 @@
       <!-- Triggers the font to load immediately and then is replaced by the app -->
       <div style="visibility: hidden">X</div>
     </div>
-
-    <div id="background-radial-gradient"></div>
 
     <!--
       This HTML file is a template.
