--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       }
     </style>
     <!-- Hotjar Tracking Code for https://niifi-interface.netlify.app/ -->
-    <title>Niifi Interface</title>
+    <title>NiiFi Interface</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
